<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CurrencyCalc</string>
    <string name="action_about">About</string>
    <string name="select">Wybierz walutę</string>
    <string name="calculate">Oblicz</string>
    <string name="refresh">Odśwież</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="chf">CHF</string>
    <string name="pln">PLN</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="findBankButton">Znajdź najbliższy bank</string>
    <string name="longitude">Długość:</string>
    <string name="latitude">Szerokość:</string>
    <string name="other">Inne</string>
    <string name="youAreHere">Jesteś tutaj</string>
    <string name="arrow">-&gt;</string>

</resources>
