<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:maps="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3" 
        android:rowCount="3">
        
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/latitude"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="unknown"
            android:textSize="20dip" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_column="2"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:text="@string/refresh" />
   

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/longitude"
            android:textSize="20dip" >
        </TextView>

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:text="unknown"
            android:textSize="20dip" >

        </TextView>
	</GridLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
		/>
    

</LinearLayout> 